--- a/index.html
+++ b/index.html
@@ -1,2 +1,179 @@
-Кто я?
-?
+<!doctype html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="EVA - это творческое объединение актёров закадрового озвучивания. Мы дарим вашим любимым героям живые эмоции и приятные голоса."/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="yandex-verification" content="a9031592100aa8ff" />
+    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/1e381efb4a.js" crossorigin="anonymous"></script>
+    <title>EVA - Epic Voice Anime</title>
+
+    <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(87074851, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/87074851" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+
+</head>
+<body>
+
+<!-- Шапка-ушанка --> 
+<div class="header">
+    <div class="menu"><a href="team"><img src="img/eva-menu-I.webp" alt="team"></a></div>
+    <div class="logo-menu"><a href="index"><img src="img/logo.webp" alt="logo"></a></div>
+    <div class="menu"><a href="donats"><img src="img/eva-menu-II.webp" alt="donats"></a></div>
+</div>
+<!-- Релизы -->
+<div class="main">
+<div class="releases">
+
+<div class="release">
+    <a href="releases/kawaii-dake-ja-nai-shikimori-san">
+    <img src="img/img-wp/kawaii-shikimori-p.webp" alt="Моя девушка не только милая"></a>
+    <div class="release-info">
+    <div class="release-title">
+            Моя девушка не только милая
+    </div>
+    <div class="release-eng-title">
+            Kawaii dake ja Nai Shikimori-san
+    </div>
+    </div>
+    </div>
+
+<div class="release">
+    <a href="releases/spy-x-family">
+    <img src="img/img-wp/spy-x-family-p.webp" alt="Семья шпиона"></a>
+    <div class="release-info">
+    <div class="release-title">
+            Семья шпиона
+    </div>
+    <div class="release-eng-title">
+            Spy x Family
+    </div>
+    </div>
+    </div>
+
+<div class="release">
+    <a href="releases/shijou-saikyou-no-daimaou">
+    <img src="img/img-wp/demon-lord-p.webp" alt="Величайший Повелитель Демонов перерождается как типичное ничтожество"></a>
+    <div class="release-info">
+    <div class="release-title">
+            Величайший Повелитель
+    </div>
+    <div class="release-eng-title">
+            Shijou Saikyou no Daimaou, Murabito A ni Tensei suru
+    </div>
+    </div>
+    </div>
+
+<div class="release">
+    <a href="releases/aharen-san-wa-hakarenai">
+    <img src="img/img-wp/Aharen-p.webp" alt="Непостижимая Ахарэн"></a>
+    <div class="release-info">
+    <div class="release-title">
+            Непостижимая Ахарэн
+    </div>
+    <div class="release-eng-title">
+            Aharen-san wa Hakarenai
+    </div>
+    </div>
+    </div>
+
+<div class="release">
+    <a href="releases/koroshi-ai">
+    <img src="img/img-wp/koroshi-ai-p.webp" alt="Убивающая любовь"></a>
+    <div class="release-info">
+    <div class="release-title">
+            Убивающая любовь
+    </div>
+    <div class="release-eng-title">
+            Koroshi ai
+    </div>
+    </div>
+    </div>
+
+<div class="release">
+    <a href="releases/sasaki-to-miyano">
+    <img src="img/img-wp/sasaki-to-miyano-p.webp" alt="Сасаки и Мияно"></a>
+    <div class="release-info">
+    <div class="release-title">
+            Сасаки и Мияно
+    </div>
+    <div class="release-eng-title">
+            Sasaki to Miyano
+    </div>
+    </div>
+    </div>
+
+<div class="release">
+    <a href="releases/sabikui-bisco">
+    <img src="img/img-wp/sabikui-bisco-p.webp" alt="Биско-ржавоед"></a>
+    <div class="release-info">
+    <div class="release-title">
+            Биско-ржавоед
+    </div>
+    <div class="release-eng-title">
+            Sabikui Bisco
+    </div>
+    </div>
+    </div>
+    
+<div class="release">
+    <a href="releases/doki">
+    <img src="img/img-wp/doki-p.webp" alt="Доки, ты справишься!"></a>
+    <div class="release-info">
+    <div class="release-title">
+            Доки, ты справишься!
+    </div>
+    <div class="release-eng-title">
+            Ganbare Douki-chan
+    </div>
+    </div>
+    </div>
+<!--  -->
+
+<!-- РЕЛИЗ -->
+<div class="release">
+    <a href="releases/hazbin">
+    <img src="img/img-wp/hazbin-p.webp" alt="Отель «Хазбин»"></a>
+    <div class="release-info">
+    <div class="release-title">
+            Отель «Хазбин»
+    </div>
+    <div class="release-eng-title">
+            Hazbin Hotel
+    </div>
+    </div>
+    </div>
+<!--  -->
+
+
+
+</div>
+</div>
+
+<!-- Подвалыч -->
+<div class="footer">
+<p>Оставайся на связи!</p>
+<a href="https://vk.com/evanime"><i class="fa-brands fa-vk fa-3x"></i></a>
+<a href="https://t.me/evanime"><i class="fa-brands fa-telegram fa-3x"></i></a>
+<a href="https://www.tiktok.com/@evanime.online"><i class="fa-brands fa-tiktok fa-3x"></i></a>
+<p>Epic Voice Anime | 2022</p>
+<p>По вопросам сотрудничества и для правообладателей:</p>
+<p>epicvoiceanime@gmail.com</p>
+</div>
+
+</body>
+</html>
