--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <img src="img/img-wp/doki-p.webp" alt="Доки, ты справишься!"></a>
     <div class="release-info">
     <div class="release-title">
-            Доки, ты справишься!
+            Доки, ты справишься!!
     </div>
     <div class="release-eng-title">
             Ganbare Douki-chan
