--- a/index.html
+++ b/index.html
@@ -10,21 +10,6 @@
     <script src="https://kit.fontawesome.com/1e381efb4a.js" crossorigin="anonymous"></script>
     <title>EVA - Epic Voice Anime</title>
 
-    <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(87074851, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/87074851" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
 
 </head>
 <body>
@@ -36,6 +21,7 @@
     <div class="menu"><a href="donats"><img src="img/eva-menu-II.webp" alt="donats"></a></div>
 </div>
 <!-- Релизы -->
+  автор тестирует свою хуйню на спизженом коде, расходимся
 <div class="main">
 <div class="releases">
 
