--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="menu"><a href="donats"><img src="img/eva-menu-II.webp" alt="donats"></a></div>
 </div>
 <!-- Релизы -->
-  автор тестирует свою хуйню на спизженом коде, расходимся
+  автор тестирует свою хуйню на спизженом коде, расходимся!
 <div class="main">
 <div class="releases">
 
