--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru" class="js">
 <head>
-	<!-- Required meta tags -->
+	<!-- Required meta tыыags -->
 	{headers}
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
