--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="shortcut icon" href="{THEME}/images/favicon.ico" />
-	<link href="{THEME}/css/flexboxgrid.css" rel="stylesheet" />
-	<link href="{THEME}/css/owl.carousel.min.css" rel="stylesheet" />
-	<link href="{THEME}/css/jquery.mCustomScrollbar.min.css" rel="stylesheet" />
-	<link href="{THEME}/css/APlayer.min.css" rel="stylesheet" />
-	<link href="{THEME}/css/nouislider.min.css" rel="stylesheet" />
-	<link href="{THEME}/css/jquery.toast.css" rel="stylesheet" />
-	<link href="{THEME}/css/jquery.fancybox.css" rel="stylesheet" />
-	<link href="{THEME}/css/engine.css" rel="stylesheet" /> 
-	<link href="{THEME}/css/styles.css" rel="stylesheet" />		
+	<link href=".../css/flexboxgrid.css" rel="stylesheet" />
+	<link href=".../css/owl.carousel.min.css" rel="stylesheet" />
+	<link href=".../css/jquery.mCustomScrollbar.min.css" rel="stylesheet" />
+	<link href=".../css/APlayer.min.css" rel="stylesheet" />
+	<link href=".../css/nouislider.min.css" rel="stylesheet" />
+	<link href=".../css/jquery.toast.css" rel="stylesheet" />
+	<link href=".../css/jquery.fancybox.css" rel="stylesheet" />
+	<link href=".../css/engine.css" rel="stylesheet" /> 
+	<link href=".../css/styles.css" rel="stylesheet" />		
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&amp;subset=cyrillic" rel="stylesheet">
-    <script src="//fumodub.ru/playerjs.js" type="text/javascript"></script>
 <!-- Yandex.RTB -->
 <script>window.yaContextCb=window.yaContextCb||[]</script>
 <script src="https://yandex.ru/ads/system/context.js" async></script>
