--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="shortcut icon" href="{THEME}/images/favicon.ico" />
-	<link href=".../css/flexboxgrid.css" rel="stylesheet" />
-	<link href=".../css/owl.carousel.min.css" rel="stylesheet" />
-	<link href=".../css/jquery.mCustomScrollbar.min.css" rel="stylesheet" />
-	<link href=".../css/APlayer.min.css" rel="stylesheet" />
-	<link href=".../css/nouislider.min.css" rel="stylesheet" />
-	<link href=".../css/jquery.toast.css" rel="stylesheet" />
-	<link href=".../css/jquery.fancybox.css" rel="stylesheet" />
-	<link href=".../css/engine.css" rel="stylesheet" /> 
-	<link href=".../css/styles.css" rel="stylesheet" />		
+	<link href="../css/flexboxgrid.css" rel="stylesheet" />
+	<link href="../css/owl.carousel.min.css" rel="stylesheet" />
+	<link href="../css/jquery.mCustomScrollbar.min.css" rel="stylesheet" />
+	<link href="../css/APlayer.min.css" rel="stylesheet" />
+	<link href="../css/nouislider.min.css" rel="stylesheet" />
+	<link href="../css/jquery.toast.css" rel="stylesheet" />
+	<link href="../css/jquery.fancybox.css" rel="stylesheet" />
+	<link href="../css/engine.css" rel="stylesheet" /> 
+	<link href="../css/styles.css" rel="stylesheet" />		
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&amp;subset=cyrillic" rel="stylesheet">
 <!-- Yandex.RTB -->
 <script>window.yaContextCb=window.yaContextCb||[]</script>
