--- a/index.html
+++ b/index.html
@@ -145,17 +145,289 @@
 					</div>
 					<div class="col__12">
 						<!-- slider__carousel -->
-						<div class="owl-carousel slider__carousel">
-							{custom category="13" template="modules/carousel__item" navigation="no" limit="20" cache="no"}
-						</div>
-						<!-- end slider__carousel -->
-						<!-- slider__nav -->
-						<button class="slider__nav slider__nav--prev" type="button">
-							<span class="md__icon md-arrowl"></span>
-						</button>
-						<button class="slider__nav slider__nav--next" type="button">
-							<span class="md__icon md-arrowr"></span>
-						</button>
+<div class="owl-carousel slider__carousel owl-loaded owl-drag">
+							<!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item --><!-- carousel__item -->
+
+<!-- end carousel__item -->
+						<div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-1342px, 0px, 0px); transition: all 0s ease 0s; width: 6710px;"><div class="owl-item cloned" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/113-tomodachi-game.html" title="Игра друзей">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-04/4-17.jpg" alt=""></figure></div>
+			<div class="label label__rate">6 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Игра друзей</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item cloned" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/115-honzuki-no-gekokujou-shisho-ni-naru-tame-ni-wa-shudan-wo-erandeiraremasen-3rd-season.html" title="Власть книжного червя 3">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-04/3-27.jpg" alt=""></figure></div>
+			<div class="label label__rate">5 из 10</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Власть книжного червя 3</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item cloned" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/13-mahou-tsukai-no-yome-nishi-no-shounen-to-seiran-no-kishi.html" title="Невеста чародея: Мальчик с Запада и рыцарь горной дымки">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-03/f-hfbpg9es0.jpg" alt=""></figure></div>
+			<div class="label label__rate">2 из 3</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Невеста чародея: Мальчик с Запада и рыцарь горной дымки</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item cloned" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/47-futsal-boys.html" title="Мини-футбол для мальчиков">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-01/4-2.jpg" alt=""></figure></div>
+			<div class="label label__rate">5 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Мини-футбол для мальчиков</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item cloned" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/49-tensai-ouji-no-akaji-kokka-saisei-jutsu.html" title="Руководство гениального принца по вызволению страны из долгов">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-01/3-15.jpg" alt=""></figure></div>
+			<div class="label label__rate">3 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Руководство гениального принца по вызволению страны из долгов</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item active" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/23-waccha-primagi.html" title="Ваття ПриМаги!">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2021-11/2-11.jpg" alt=""></figure></div>
+			<div class="label label__rate">23 из ?</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Ваття ПриМаги!</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item active" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/97-build-divide-code-white.html" title="Билд Дивайд: Белый код">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-04/4-16.jpg" alt=""></figure></div>
+			<div class="label label__rate">6 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Билд Дивайд: Белый код</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item active" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/100-kawaii-dake-ja-nai-shikimori-san.html" title="Моя девушка не только милая">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-03/4-15.jpg" alt=""></figure></div>
+			<div class="label label__rate">6 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Моя девушка не только милая</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item active" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/107-gunjou-no-fanfare.html" title="Ультрамариновые фанфары">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-05/uuut9yervc95jnow34h659tumf4dsqxprs2htzd2qw0r-pwufh239ce_b8loabqgwvjbl9ryzbydbcyiiktq1dlx.jpg" alt=""></figure></div>
+			<div class="label label__rate">7 из 13</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Ультрамариновые фанфары</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item active" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/99-dance-dance-danseur.html" title="Танцуй, танцуй, танцор">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-05/exqslkdt_ej5ieu5tai5qusp0k39rokcr_gvjtbujmvgpaum_bk4b2jumaawcoz1blml2kmw7-g9zhkb8blaeznn.jpg" alt=""></figure></div>
+			<div class="label label__rate">6 из 11</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Танцуй, танцуй, танцор</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/96-rikei-ga-koi-ni-ochita-no-de-shoumei-shitemita-heart.html" title="Влюблённые учёные и научное доказательство любви 2">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-04/de45d731aa97d72a4c8915508d5596dc1579031094_full.jpg" alt=""></figure></div>
+			<div class="label label__rate">7 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Влюблённые учёные и научное доказательство любви 2</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/108-kaguya-sama-wa-kokurasetai-ultra-romantic.html" title="Госпожа Кагуя: в любви как на войне 3">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-04/1b1mazscgeu.jpg" alt=""></figure></div>
+			<div class="label label__rate">6 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Госпожа Кагуя: в любви как на войне 3</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/109-machikado-mazoku-2-choume.html" title="Восхождение чародея">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-04/4-19.jpg" alt=""></figure></div>
+			<div class="label label__rate">6 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Восхождение чародея</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/39-komi-san-wa-comyushou-desu-season-2.html" title="У Коми проблемы с общением 2">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-03/erzp4flysek.jpg" alt=""></figure></div>
+			<div class="label label__rate">6 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">У Коми проблемы с общением 2</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/31-tate-no-yuusha-no-nariagari-season-2.html" title="Восхождение героя щита 2">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-03/5-3.jpg" alt=""></figure></div>
+			<div class="label label__rate">6 из 13</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Восхождение героя щита 2</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/113-tomodachi-game.html" title="Игра друзей">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-04/4-17.jpg" alt=""></figure></div>
+			<div class="label label__rate">6 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Игра друзей</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/115-honzuki-no-gekokujou-shisho-ni-naru-tame-ni-wa-shudan-wo-erandeiraremasen-3rd-season.html" title="Власть книжного червя 3">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-04/3-27.jpg" alt=""></figure></div>
+			<div class="label label__rate">5 из 10</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Власть книжного червя 3</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/13-mahou-tsukai-no-yome-nishi-no-shounen-to-seiran-no-kishi.html" title="Невеста чародея: Мальчик с Запада и рыцарь горной дымки">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-03/f-hfbpg9es0.jpg" alt=""></figure></div>
+			<div class="label label__rate">2 из 3</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Невеста чародея: Мальчик с Запада и рыцарь горной дымки</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/47-futsal-boys.html" title="Мини-футбол для мальчиков">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-01/4-2.jpg" alt=""></figure></div>
+			<div class="label label__rate">5 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Мини-футбол для мальчиков</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/49-tensai-ouji-no-akaji-kokka-saisei-jutsu.html" title="Руководство гениального принца по вызволению страны из долгов">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-01/3-15.jpg" alt=""></figure></div>
+			<div class="label label__rate">3 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Руководство гениального принца по вызволению страны из долгов</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item cloned" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/23-waccha-primagi.html" title="Ваття ПриМаги!">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2021-11/2-11.jpg" alt=""></figure></div>
+			<div class="label label__rate">23 из ?</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Ваття ПриМаги!</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item cloned" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/97-build-divide-code-white.html" title="Билд Дивайд: Белый код">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-04/4-16.jpg" alt=""></figure></div>
+			<div class="label label__rate">6 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Билд Дивайд: Белый код</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item cloned" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/100-kawaii-dake-ja-nai-shikimori-san.html" title="Моя девушка не только милая">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-03/4-15.jpg" alt=""></figure></div>
+			<div class="label label__rate">6 из 12</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Моя девушка не только милая</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item cloned" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/107-gunjou-no-fanfare.html" title="Ультрамариновые фанфары">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-05/uuut9yervc95jnow34h659tumf4dsqxprs2htzd2qw0r-pwufh239ce_b8loabqgwvjbl9ryzbydbcyiiktq1dlx.jpg" alt=""></figure></div>
+			<div class="label label__rate">7 из 13</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Ультрамариновые фанфары</div>
+		</footer>
+	</a>
+</article></div><div class="owl-item cloned" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
+	<a href="https://nevermoreteamsound.ru/anime/99-dance-dance-danseur.html" title="Танцуй, танцуй, танцор">
+		<header class="carousel__item-header">
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-05/exqslkdt_ej5ieu5tai5qusp0k39rokcr_gvjtbujmvgpaum_bk4b2jumaawcoz1blml2kmw7-g9zhkb8blaeznn.jpg" alt=""></figure></div>
+			<div class="label label__rate">6 из 11</div>
+		</header>
+		<footer class="carousel__item-bottom">
+			<div class="c__item-title">Танцуй, танцуй, танцор</div>
+		</footer>
+	</a>
+</article></div></div></div><div class="owl-nav disabled"><button type="button" role="presentation" class="owl-prev"><span aria-label="Previous">‹</span></button><button type="button" role="presentation" class="owl-next"><span aria-label="Next">›</span></button></div><div class="owl-dots disabled"></div></div>
 						<!-- end slider__nav -->
 					</div>
 				</div>
