--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 </article></div><div class="owl-item cloned" style="width: 258.4px; margin-right: 10px;"><article class="carousel__item">
 	<a href="https://nevermoreteamsound.ru/anime/115-honzuki-no-gekokujou-shisho-ni-naru-tame-ni-wa-shudan-wo-erandeiraremasen-3rd-season.html" title="Власть книжного червя 3">
 		<header class="carousel__item-header">
-			<div class="c__item-image"><figure><img class="xfieldimage poster" src="/uploads/posts/2022-04/3-27.jpg" alt=""></figure></div>
+			<div class="c__item-image"><figure><img class="xfieldimage poster" src="https://s4nn3r.github.io/FuDubmo/uploads/posts/2022-04/3-27.jpg" alt=""></figure></div>
 			<div class="label label__rate">5 из 10</div>
 		</header>
 		<footer class="carousel__item-bottom">
