--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru" class="" ><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <link rel="preload stylesheet" as="style" type="text/css" href="//css/test1.css">
-    <link rel="preload stylesheet" as="style" type="text/css" href="//css/test2.css">
+    <link rel="preload stylesheet" as="style" type="text/css" href="//s4nn3r.github.io/FuDubmo/css/test1.css">
+    <link rel="preload stylesheet" as="style" type="text/css" href="//s4nn3r.github.io/FuDubmo/css/test2.css">
 
 </head>
 <body>
