--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="swiper-description" style="pointer-events: all;">
                 </div>
             </div>
-            <img src="./Мастера Меча Онлайн_ Прогрессив — Ария в беззвёздной ночи _ Sword Art Online_ Progressive Movie - Hoshi Naki Yoru no Aria_files/3c4efb3w4vr234c.jpg" alt="Постер для фона сайта">
+            <img src="//FuDubmo/posters/abyss.jpg" alt="Постер для фона сайта">
         </div>
     </div>
 <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
