--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <nav class="navbar navbar-header navbar-expand-lg navbar-dark transparent" id="navbar">
     <div class="container-fluid position-relative">
 
-        <a class="navbar-brand" href="https://aniu.ru/" style="margin-top: -10px;" title="Aniu.ru - Аниме для тебя">
+        <a class="navbar-brand" href="https://s4nn3r.github.io/FuDubmo/" style="margin-top: -10px;" title="Кто я?">
             <span style="position: relative;">
                 FumoDub<span style="font-weight: 100;color:#fff;;">.ru</span>
                 <small style="font-size: 8pt;color:#fff;;position: absolute;left: 0;bottom: -12px;font-weight: 100;">Beta version</small>
@@ -18,12 +18,8 @@
 		
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="https://aniu.ru/anime">Аниме</a>
-                </li>
-
                 <li class="ml-2 nav-item">
-                    <a class="nav-link" target="_blank" style="background: rgba(255,255,255,0.1);" href="https://my.qiwi.com/Aleksei-AIGtMGn6g6?noCache=true">
+                    <a class="nav-link" target="_blank" style="background: rgba(255,255,255,0.1);" href="https://vk.com/fumodub?w=app6887721_-205217516">
                     <span style="margin-right: 5px;">❤</span>
                         Помоги нам выжить
                     </a>
@@ -108,7 +104,7 @@
                             Созданный в Бездне: Солнце, вспыхнувшее в Золотом городе                        </h1>
 
                         <!-- release original title -->  
-                        <a data-toggle="collapse" href="https://aniu.ru/#information" role="button" aria-expanded="false" aria-controls="information"> 
+                        <a data-toggle="collapse" role="button" aria-expanded="false" aria-controls="information"> 
                             <small style="margin-top: 10px;margin-bottom: 20px;line-height: 22px;width: calc(100% - 50px);" itemprop="alternativeHeadline">Made in Abyss: Retsujitsu no Ougonkyou</small>
                         </a><br>
 
