--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <div class="slicky-image col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-3">
                     <div class="sticky-tops" style="top: 80px;">
                     
-                        <div class="image" itemprop="image" title="Мастера Меча Онлайн: Прогрессив — Ария в беззвёздной ночи постер">
-                                                        <img src="//s4nn3r.github.io/FuDubmo/posters/abyss.jpg" class="poster-img" width="100%">
+                        <div class="image" itemprop="image">
+                                  <img src="//s4nn3r.github.io/FuDubmo/posters/abyss.jpg" class="poster-img" width="100%">
                             <img src="//s4nn3r.github.io/FuDubmo/posters/abyss.jpg" class="poster-img" style="filter: blur(100px);position: absolute;top: 0;z-index: -1;opacity: .5;" width="100%">
                         </div>
                     </div>
