--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru" class="" ><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <link rel="preload stylesheet" as="style" type="text/css" href="//s4nn3r.github.io/FuDubmo/css/test1.css">
-    <link rel="preload stylesheet" as="style" type="text/css" href="//s4nn3r.github.io/FuDubmo/css/test2.css">
+    <link rel="preload stylesheet" as="style" type="text/css" href="css/test1.css">
+    <link rel="preload stylesheet" as="style" type="text/css" href="css/test2.css">
 
 </head>
 <body>
@@ -70,7 +70,7 @@
                 <div class="swiper-description" style="pointer-events: all;">
                 </div>
             </div>
-            <img src="//s4nn3r.github.io/FuDubmo/posters/abyss.jpg" alt="Постер для фона сайта">
+            <img src="posters/abyss.jpg" alt="Постер для фона сайта">
         </div>
     </div>
 <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
@@ -85,8 +85,8 @@
                     <div class="sticky-tops" style="top: 80px;">
                     
                         <div class="image" itemprop="image">
-                                  <img src="//s4nn3r.github.io/FuDubmo/posters/abyss.jpg" class="poster-img" width="100%">
-                            <img src="//s4nn3r.github.io/FuDubmo/posters/abyss.jpg" class="poster-img" style="filter: blur(100px);position: absolute;top: 0;z-index: -1;opacity: .5;" width="100%">
+                                  <img src="posters/abyss.jpg" class="poster-img" width="100%">
+                            <img src="posters/abyss.jpg" class="poster-img" style="filter: blur(100px);position: absolute;top: 0;z-index: -1;opacity: .5;" width="100%">
                         </div>
                     </div>
                 </div>
