--- a/profile.html
+++ b/profile.html
@@ -58,6 +58,7 @@
                 <div><button>Выйти</button></div>
             </div>
         </div>
+        <section class="otstup2"></section>
     </section>
     <section class="otstup"></section>
     <section class="profile">
